# fabsfit

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
fabsfit/: constants.py  miscfcns.py  parametrization.py  peng.py
fabsfit/cui/: fabsfit_script.py
pengfit/: parametrization.py  peng.py
src/fabsfit/: doyleturner.py  miscfcns.py  parametrization.py  peng.py  plot.py
src/fabsfit/cui/: download.py  fabsfit_script.py  fetchparams.py  fit.py  plot.py
src/fabsfit/data/: __init__.py
