[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "fabsfit"
dynamic = ["version"]
description = "Fitting absorptive scattering factors"
readme = "README.md"
license = "GPL-3.0-only"
authors = [
    { name = "Paul Zeiger", email = "paul.zeiger@physics.uu.se" },
]
requires-python = ">=3.10"
dependencies = [
    "numba",
    "numpy",
    "matplotlib",
    "periodictable",
    "requests",
    "scipy",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]


[project.urls]
Homepage = "https://github.com/pzeiger/fabsfit"

[project.scripts]
fabsfit = "fabsfit.cui.fabsfit_script:main"

[tool.hatch.version]
path = "src/fabsfit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
    "src/fabsfit"
]
ignore-vcs = true
exclude = [
  "*.json",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
ignore-vcs = true
exclude = [
  "*.json",
]

